# Delta-HPC

./: .gitignore  MIG_geometry_matrix.csv  README.md  docker-compose.yaml  justfile  mps.sh  pyproject.toml  update_params.py
configs/: bench_config.yaml  deployment.yaml  grid_search.yaml  qwen2_5-14b-instruct.yaml  qwen2_5-3b-instruct.yaml  qwen2_5-7b-instruct.yaml  qwen2_5-coder-14b-instruct.yaml  qwen2_5-coder-14b.yaml  qwen2_5-coder-3b-instruct.yaml  qwen2_5-coder-3b.yaml  qwen2_5-coder-7b-instruct.yaml  qwen2_5-coder-7b.yaml  qwen3-coder-next-fp8.yaml  qwen3-coder-next.yaml  qwen3-next-80b-a3b-instruct-fp8.yaml  qwen3-next-80b-a3b-instruct.yaml  simulation_config.yaml  training_config.yaml
configs/gpus/: A100_40GB.py  B200.py
scratch/: mock_gpu.py
scripts/: bench_serve_prefill.sh  bench_serve_tpot.sh  cleanup_all.sh  count_bench_requests.py  get_latest_ckpts.py  launch_vllm.sh
src/bench/: config.py  env.py  heuristic.py  heuristic_algo.txt  main.py  models.py  prints.py  qas.py  qas_profile.py  request_loader.py  service_rate.py
src/dataset/: coder_preprocess.py  explore.py  lmsys_preprocess.py  preprocess.py  rag_convert_to_sharegpt.py
src/deploy/: __init__.py  act_controller.py  base_agent.py  cluster.py  config.py  dashboard.py  heuristic_agent.py  main.py  metrics.py  mig_controller.py  models.py  obs.py  qas_agent.py  qas_profile.py  report.py  req_pub.py  rl.py  service_rate.py  setup_gpu.py  system.py  vllm.py
src/profiling/: coder-generate.py  generate.py  prefill.py  tpot.py
src/profiling/coder/: generate.py  tpot.py
src/share/: env.py  hardware.py  logging_utils.py  mig_matrix.py  models.py  request_loader.py
src/simulation/: agent.py  config.py  engine.py  env.py  environment_state.py  global_vars.py  logger.py  main.py  management.py  mig_matrix.py  mig_rule.py  models.py  objects.py  request.py  request_loader.py  simulator.py  utils.py  worker.py
src/training/: callbacks.py  config.py  grid_search.py  logger.py  models.py  resource_manager.py  rewards.py  train.py
