[project]
name = "hpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.0",
    "datasets>=4.7.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.9.1%2Bcu128-cp312-cp312-manylinux_2_28_aarch64.whl" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_aarch64.whl" }
