[project]
name = "delta-hpc"
version = "0.1.0"
description = "Reinforcement learning-based dynamic MIG resource manager for serving heterogeneous LLM workloads on NVIDIA MIG-enabled GPUs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "sb3-contrib>=2.7.1",
    "sortedcontainers>=2.4.0",
    "stable-baselines3>=2.7.1",
    "tqdm<=4.66.5",
    "transformers>=5.3.0",
    "torch>=2.11.0",
    "tensorboard>=2.20.0",
    "tabulate>=0.10.0",
    "seaborn>=0.13.2",
    "openai>=2.36.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff.format]
preview = true

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "sortedcontainers-stubs>=2.4.3",
    "types-tabulate>=0.10.0.20260408",
]
